--- a/GameMatcher.csproj
+++ b/GameMatcher.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>e180de59-d724-4fc8-93e2-d2dfa31015f3</UserSecretsId>
   </PropertyGroup>
 
 </Project>
